clusters/9ka/downloaders/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: indexer
    app.kubernetes.io/part-of: downloaders
spec:
  ports:
  - port: 80
    name: http
    targetPort: http
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: indexer
    app.kubernetes.io/part-of: downloaders
