clusters/9ka/downloaders/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: prowlarr.9ka.nl
    external-dns.alpha.kubernetes.io/target: 431113a6-4cf3-4a66-9750-17113ae2e689.cfargotunnel.com
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: indexer
    app.kubernetes.io/part-of: downloaders
spec:
  ingressClassName: cilium
  rules:
  - host: prowlarr.9ka.nl
    http:
      paths:
      - backend:
          service:
            name: prowlarr
            port:
              name: http
        path: /
        pathType: Prefix
